--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,16 @@ before_install:
   - docker build -t navisot/docker-react -f Dockerfile.dev .
 script:
   - docker run -e CI=true navisot/docker-react npm run test
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "Docker"
+  env: "Docker-env"
+  bucket_name: "elasticbeanstalk-us-east-2-328876638854"
+  bucket_path: "Docker"
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: 
+    secure: "$AWS_SECRET_KEY"
+  on:
+    branch: master
+
